[gd_scene load_steps=7 format=3 uid="uid://bphnle6k7nkfn"]

[ext_resource type="Script" uid="uid://c37kh3fmld2mf" path="res://shop/shop.gd" id="1_j5q1e"]
[ext_resource type="Texture2D" uid="uid://bf6xft2nuojjg" path="res://shop/shopcoin.png" id="2_mrnko"]
[ext_resource type="Texture2D" uid="uid://bcjh7vdw2tong" path="res://assets/sword.png" id="3_3hcns"]
[ext_resource type="Texture2D" uid="uid://c4rxvt16g8vqt" path="res://heart.png" id="3_gy7ao"]
[ext_resource type="AudioStream" uid="uid://blpe03wkgqjrq" path="res://CoinCollect.mp3" id="4_gd5js"]
[ext_resource type="Texture2D" uid="uid://cws31lbpc0nmt" path="res://enemy/image (5).png" id="4_q4g17"]

[node name="Shop" type="CanvasLayer"]
layer = 5
script = ExtResource("1_j5q1e")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -147.0
offset_right = 295.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CoinCounter" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
alignment = 2

[node name="CoinIcon" type="TextureRect" parent="Panel/CoinCounter"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_mrnko")
expand_mode = 1
stretch_mode = 5

[node name="Value" type="Label" parent="Panel/CoinCounter"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 1

[node name="ItemGrid" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Item1" type="VBoxContainer" parent="Panel/ItemGrid"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/ItemGrid/Item1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_gy7ao")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="Panel/ItemGrid/Item1"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+ 25%"
horizontal_alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="Panel/ItemGrid/Item1"]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="Panel/ItemGrid/Item1/PriceContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_mrnko")
expand_mode = 1
stretch_mode = 5

[node name="Price" type="Label" parent="Panel/ItemGrid/Item1/PriceContainer"]
layout_mode = 2
text = "5"

[node name="BuyButton" type="Button" parent="Panel/ItemGrid/Item1"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "✔ (1)"

[node name="Item2" type="VBoxContainer" parent="Panel/ItemGrid"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/ItemGrid/Item2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_q4g17")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="Panel/ItemGrid/Item2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = " +10%"
horizontal_alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="Panel/ItemGrid/Item2"]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="Panel/ItemGrid/Item2/PriceContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_mrnko")
expand_mode = 1
stretch_mode = 5

[node name="Price" type="Label" parent="Panel/ItemGrid/Item2/PriceContainer"]
layout_mode = 2
text = "10"

[node name="BuyButton" type="Button" parent="Panel/ItemGrid/Item2"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "✔ (2)"

[node name="Item3" type="VBoxContainer" parent="Panel/ItemGrid"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/ItemGrid/Item3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_3hcns")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="Panel/ItemGrid/Item3"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+10"
horizontal_alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="Panel/ItemGrid/Item3"]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="Panel/ItemGrid/Item3/PriceContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_mrnko")
expand_mode = 1
stretch_mode = 5

[node name="Price" type="Label" parent="Panel/ItemGrid/Item3/PriceContainer"]
layout_mode = 2
text = "15"

[node name="BuyButton" type="Button" parent="Panel/ItemGrid/Item3"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "✔ (3)"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -292.0
offset_right = 42.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
text = "X esc"

[node name="PurchaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gd5js")
volume_db = -5.0
